# gdtq

./: .gitignore  GDTQ_QUICKREF.en.md  GDTQ_QUICKREF.ja.md  LICENSE  Makefile.am  README  README.md  bootstrap  configure.ac  gdtq-0.0.2.tar.xz  gqd-shared.pc.in  gqd.pc.in
docs/: Makefile.am
inc/: Makefile.am  common.cu  common.cuh  common_s.cu  common_s.cuh  convert_to_float.py  cuda_header.cu  gdd_basic.cu  gdd_basic.cuh  gdd_exp.cu  gdd_exp.cuh  gdd_log.cu  gdd_log.cuh  gdd_sincos.cu  gdd_sincos.cuh  gdd_sqrt.cu  gdd_sqrt.cuh  gds_basic.cu  gds_basic.cuh  gds_exp.cu  gds_exp.cuh  gds_log.cu  gds_log.cuh  gds_sincos.cu  gds_sincos.cuh  gds_sqrt.cu  gds_sqrt.cuh  gqd.cu  gqd.cuh  gqd_basic.cu  gqd_basic.cuh  gqd_exp.cu  gqd_exp.cuh  gqd_log.cu  gqd_log.cuh  gqd_sincos.cu  gqd_sincos.cuh  gqd_sqrt.cu  gqd_sqrt.cuh  gqd_type.h  (+36 more)
m4/: ax_cuda.m4
test/: Makefile.am  README_CUDA13_FIX.md  benchmark.cpp  gqdtest.h  gqdtest_kernel.cu  make.sh  sqstest_kernel.cu  test_util.cpp  test_util.h
