## SPDX-License-Identifier: BSD-3-Clause
## Copyright (c) 2026 Tomonori Kouya. Based on GQD (Mian Lu) and QD (Bailey et al., LBNL).
##
## User documentation. Files listed in dist_doc_DATA are both bundled in
## `make dist` and installed to $(docdir) (typically $(prefix)/share/doc/gdtq)
## by `make install`.

dist_doc_DATA = \
	GDTQ_QUICKREF.ja.md \
	GDTQ_QUICKREF.en.md
